@@ -1,3 +1,15 @@
+2012-10-08  Ryuan Choi  <ryuan.choi@samsung.com>
+
+        [EFL] Build ControlTheme only when necessary
+        https://bugs.webkit.org/show_bug.cgi?id=98519
+
+        Reviewed by Eric Seidel.
+
+        * EWebLauncher/ControlTheme/CMakeLists.txt:
+        Added custom command keyword not to build ControlTheme every time.
+        In addition, removed `ALL` keyword because targets, which use ControlTheme,
+        already have dependency.
+
 2012-10-08  Peter Rybin  <peter.rybin@gmail.com>
 
         Do not swallow fatal messages in qt/DumpRenderTree
